# chatRaghu-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerrun.aws.json  Procfile  README.md  app.py  chatRaghu.code-workspace  d  docker-compose.test.yml  docker-compose.yml  evaluation_client.py  evaluation_models.py  evaluation_queue_manager.py  exit  get-pip.py  pyproject.toml  pytest.ini  railway.json  readme.md  requirements.txt  test_coverage.mdc  vercel.json
evals/: __init__.py  evaluators.py  run_evals.py
evals-service/: ARCHITECTURE.md  Dockerfile  README.md  __init__.py  app.py  config.py  entrypoint.sh  evaluators.py  models.py  queue_manager.py  requirements.txt  run_evals.py  storage.py
evals_service/: .gitignore  Dockerfile  ISSUE_LOG.md  README.md  __init__.py  app.py  config.py  entrypoint.sh  evaluators.py  models.py  pyproject.toml  queue_manager.py  railway.json  requirements.txt  run_evals.py  setup.py  storage.py
evals_service/evaluators/: __init__.py  base.py  generate_with_context.py  generate_with_persona.py  history_evaluator.py  judgements.py  models.py  prompts.json  prompts.py  rag_evaluator.py  relevance_check.py  simple_response_evaluator.py
evals_service/utils/: logger.py
graph/: README.md  __init__.py  adapters.py  assembly.py  config.py  engine.py  evaluation_client.py  evaluation_models.py  evaluation_queue_manager.py  graph.py  graph.py.backup  infrastructure.py  models.py  nodes.py  prompt_templates.json  retrieval.py  schemas.py  template_renderer.py  utils.py
tests/: README.md  conftest.py  test_app.py  (+8 more)
(+16 files in other folders)
